--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 <link src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
 <!-- GoogleIcons -->
-<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet"></script>
+<link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+
+<!--Google Font-->
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="http://casaalmada.hostinggratis.it/doc/css/reset.css">
 <link rel="stylesheet" href="css/style.css">
@@ -27,7 +31,7 @@
         <main>
             <section class="insert">
                 <input type="text" class="add-todo" placeholder="inserisci elemento" v-model.trim="newTodo" @keyup.enter="addTodo">
-                <button @click="addTodo">add</button>
+                <button class="btn" @click="addTodo">add</button>
             </section>
             
             <ul class="todos" >
