--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title></title>
+<title>VUE ToDO List</title>
 </head>
 <body onload="main()">
     <div id="app">
